@@ -9,7 +9,7 @@ package com.occamlab.te.spi.jaxrs.resources;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
+import java.nio.file.FileSystems;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -328,14 +328,14 @@ public class TestRunResource {
             msg.append( FILE_LOCATION + entityBody.getAbsolutePath() );
             LOGR.fine( msg.toString() );
         }
-        Map<String, List<String>> args = new HashMap<String, List<String>>();
-        args.put( "iut", Arrays.asList( entityBody.toURI().toString() ) );
+        Map<String, List<String>> args = new HashMap<>();
+        args.put( "iut", Collections.singletonList(entityBody.toURI().toString()));
         return executeTestRun( etsCode, args, preferredMediaType );
     }
 
     private Source handleMultipartFormDataPost( String etsCode, String etsVersion, File entityBody, File schBody,
                                                 String preferredMediaType ) {
-        Map<String, List<String>> args = new HashMap<String, List<String>>();
+        Map<String, List<String>> args = new HashMap<>();
         if ( !entityBody.exists() || entityBody.length() == 0 ) {
             throw new WebApplicationException( 400 );
         }
@@ -346,7 +346,7 @@ public class TestRunResource {
             msg.append( FILE_LOCATION + entityBody.getAbsolutePath() );
             LOGR.fine( msg.toString() );
         }
-        args.put( "iut", Arrays.asList( entityBody.toURI().toString() ) );
+        args.put( "iut", Collections.singletonList(entityBody.toURI().toString()));
         if ( null != schBody ) {
             if ( !schBody.exists() || schBody.length() == 0 ) {
                 throw new WebApplicationException( 400 );
@@ -358,7 +358,7 @@ public class TestRunResource {
                 msg.append( FILE_LOCATION + schBody.getAbsolutePath() );
                 LOGR.fine( msg.toString() );
             }
-            args.put( "sch", Arrays.asList( schBody.toURI().toString() ) );
+            args.put( "sch", Collections.singletonList(schBody.toURI().toString()));
         }
         return executeTestRun( etsCode, args, preferredMediaType );
     }
@@ -378,16 +378,16 @@ public class TestRunResource {
                                    String preferredMediaType ) {
         
         List<String> authCredentials = this.headers.getRequestHeader("Authorization");
-        String logDir = System.getProperty("TE_BASE") + System.getProperty( "file.separator" ) + "users"  + System.getProperty( "file.separator" ) + TestRunUtils.getUserName(authCredentials) + System.getProperty( "file.separator" ) + "rest";
+        String logDir = System.getProperty("TE_BASE") + FileSystems.getDefault().getSeparator() + "users"  + FileSystems.getDefault().getSeparator() + TestRunUtils.getUserName(authCredentials) + FileSystems.getDefault().getSeparator() + "rest";
         
         if (null != logDir) {
             String sessionId = LogUtils.generateSessionId(new File(logDir));
             
-            testRunArgs.put("logDir", Arrays.asList(logDir));
-            testRunArgs.put("sessionId", Arrays.asList(sessionId));
+            testRunArgs.put("logDir", List.of(logDir));
+            testRunArgs.put("sessionId", Collections.singletonList(sessionId));
         }
         
-        testRunArgs.put( "acceptMediaType", Arrays.asList( preferredMediaType ) );
+        testRunArgs.put( "acceptMediaType", Collections.singletonList(preferredMediaType));
         if ( LOGR.isLoggable( Level.FINE ) ) {
             StringBuilder msg = new StringBuilder( "Test run arguments - " );
             msg.append( etsCode ).append( "/" );
@@ -399,7 +399,7 @@ public class TestRunResource {
         }
         TestSuiteController controller = findController( etsCode );
         
-        testRunArgs.put("sourcesId", Arrays.asList(TestRunUtils.getSourcesId(controller)));
+        testRunArgs.put("sourcesId", List.of(TestRunUtils.getSourcesId(controller)));
         Document xmlArgs = readTestRunArguments( testRunArgs );
         Source testResults = null;
         try {
@@ -486,7 +486,7 @@ public class TestRunResource {
      */
     private MultivaluedMap<String, String> toMutableMultivaluedMap(MultivaluedMap<String, String> multivaluedMap) {
         if(multivaluedMap instanceof ImmutableMultivaluedMap<?, ?>) {
-            MultivaluedMap<String, String> newMultivaluedMap = new MultivaluedHashMap<String, String>();
+            MultivaluedMap<String, String> newMultivaluedMap = new MultivaluedHashMap<>();
             for (String key : multivaluedMap.keySet()) {
                 newMultivaluedMap.put(key, multivaluedMap.get(key));
             }
